PROJECT(hellobuild101)
CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
ADD_SUBDIRECTORY(src bin)

INSTALL(FILES COPYRIGHT README.md DESTINATION share/doc/cmake_t3)
INSTALL(PROGRAMS run_hello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake_t3)


MESSAGE("-- DESTINATION: ${DESTINATION}")
MESSAGE("-- install FILES: COPYRIGHT README.md to ${DESTINATION}/share/doc/cmake/t3")
MESSAGE("-- install PROGRAMS: run_hello.sh to ${DESTINATION}/bin")
MESSAGE("-- install DIRECTORY: doc/ to ${DESTINATION}/share/doc/cmake/t3")
